# rinha-backend-rust

./: Cargo.toml  README.md  docker-compose-dev.yml
db/: 1695246146_init_database.sql
src/: main.rs  persistence.rs
