[package]
name = "rinha_backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
time = { version = "0.3.28", features = ["macros", "serde", "formatting", "parsing"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "time", "uuid"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v7", "serde"] }
